2005-06-15  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagefile.c (gimp_imagefile_load_thumb): 
	* app/widgets/gimpthumbbox.c (gimp_thumb_box_auto_thumbnail):
	don't display a preview and don't attempt to create one if the
	image file does not exist any longer (bug #307672).

2005-06-15  Sven Neumann  <sven@gimp.org>

	* app/actions/dockable-actions.c (dockable_actions_update): set the
	"Detach Tab" action insensitive if the dockable is alone in its dock.

2005-06-15  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_input_devices_dialog):
	changed window title as suggested in bug #307701.

2005-06-15  Michael Natterer  <mitch@gimp.org>

	* libgimpmodule/gimpmodule.[ch] (gimp_module_register_enum):
	deprecated. Changed implementation to simply call
	g_type_module_register_enum().

	* modules/cdisplay_colorblind.c
	* modules/cdisplay_proof.c: use g_type_module_register_enum() instead.

2005-06-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c (gimp_image_raise_layer)
	(gimp_image_raise_layer_to_top): allow to raise a layer w/o an
	alpha channel.

2005-06-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-gradients.c: renamed internal keys.

2005-06-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: some dialog changes, hopefully to
	the better.

2005-06-13  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer.c (gimp_layer_transform_color): copy the
	alpha channel from the correct source.

2005-06-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-resize.c: added missing brackets in macros.

2005-06-11  Manish Singh  <yosh@gimp.org>

	* configure.in: if any of the pygimp dependencies aren't fulfilled,
	display a more informative message.

	* autogen.sh: depend on automake 1.8, so AM_PATH_PYTHON has a user
	defined failure mode. Also prefer automake 1.9.

2005-06-11  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c: connect to "selection-changed"